# climfill

./: CHANGELOG.md  CITATION.cff  README.md  generate_sample_data.py  paper.bib  paper.md  pyproject.toml  requirements.txt  run_climfill.py  sample_station_data.csv  streamlit_app.py
.github/workflows/: tests.yml
climfill/: __init__.py  cli.py  engine.py  reanalysis.py
tests/: test_cli.py  test_climfill.py  test_engine_branches.py  test_reanalysis.py
